--- a/src/assets/css/pages/trevelor-eft-autopay.css
+++ b/src/assets/css/pages/trevelor-eft-autopay.css
@@ -170,4 +170,12 @@
 .page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a11.a11-2 {
   left: 69px;
 }
+.page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 {
+  left: -5px;
+  width: 150px;
+  top: 316px;
+  -webkit-transform: rotate(5deg);
+      -ms-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
 /*# sourceMappingURL=trevelor-eft-autopay.css.map */
