--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -23,7 +23,7 @@
 @forward "./eft-metlife.scss";
 @forward "./safec-eft.scss";
 @forward "./trevelor-eft-autopay.scss";
-@forward "./safety-ef-form.scss";
+@forward "./safety-eft-form.scss";
 @forward "./arbella-forms.scss";
 @forward "./maip-hanover.scss";
 @forward "./mapfree.scss";
