--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5729,6 +5729,14 @@ main .wrapper .admin-section-container .content.login-pannel {
   width: 44px;
   top: 4px;
 }
+.page-details.safec-eft .signature-info .a4 {
+  left: 86px;
+  width: 122px;
+  top: 28px;
+  -webkit-transform: rotate(2deg);
+      -ms-transform: rotate(2deg);
+          transform: rotate(2deg);
+}
 .page-details.safec-eft .exlusion-info {
   position: absolute;
   top: 544px;
