--- a/src/scss/pages/arbella-forms.css
+++ b/src/scss/pages/arbella-forms.css
@@ -180,6 +180,12 @@
   width: 99px;
   top: 67px;
 }
+.page-details.arbella-eft .signature-info .a3 {
+  left: 184px;
+  width: 119px;
+  top: 119px;
+  transform: rotate(6deg);
+}
 .page-details.arbella-eft.arbella-excluison .operator-info {
   position: absolute;
   top: 305px;
