--- a/src/scss/pages/safec-eft.css
+++ b/src/scss/pages/safec-eft.css
@@ -123,6 +123,12 @@
   width: 44px;
   top: 4px;
 }
+.page-details.safec-eft .signature-info .a4 {
+  left: 86px;
+  width: 122px;
+  top: 28px;
+  transform: rotate(2deg);
+}
 .page-details.safec-eft .exlusion-info {
   position: absolute;
   top: 544px;
