--- a/src/scss/pages/trevelor-eft-autopay.css
+++ b/src/scss/pages/trevelor-eft-autopay.css
@@ -162,4 +162,10 @@
 }
 .page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a11.a11-2 {
   left: 69px;
+}
+.page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 {
+  left: 5px;
+  width: 25px;
+  top: 200px;
+  transform: rotate(5deg);
 }/*# sourceMappingURL=trevelor-eft-autopay.css.map */
