--- a/src/scss/pages/amica-forms.css
+++ b/src/scss/pages/amica-forms.css
@@ -180,6 +180,11 @@
   width: 99px;
   top: 67px;
 }
+.page-details.amica-eft .signature-info .a2 {
+  left: 661px;
+  width: 30px;
+  top: 67px;
+}
 .page-details.amica-eft.arbella-excluison .operator-info {
   position: absolute;
   top: 305px;
