--- a/src/scss/pages/amica-forms.scss
+++ b/src/scss/pages/amica-forms.scss
@@ -204,6 +204,11 @@
       width: 99px;
       top: 67px;
     }
+    .a2 {
+      left: 661px;
+      width: 30px;
+      top: 67px;
+    }
   }
 
   &.arbella-excluison {
