--- a/src/scss/pages/bristol-eft.scss
+++ b/src/scss/pages/bristol-eft.scss
@@ -146,6 +146,11 @@
       width: 246px;
       top: 90px;
     }
+    .b6 {
+      left: -80px;
+      width: 26px;
+      top: 137px;  
+    }
 
     &.payment-details-cards {
       left: 404px;
