--- a/src/scss/pages/safec-eft.scss
+++ b/src/scss/pages/safec-eft.scss
@@ -3,6 +3,10 @@
   position: relative;
 }
 
+.form-img {
+  width: 100%;
+}
+
 .page-details.safec-eft {
   position: absolute;
   top: 0;
@@ -44,6 +48,7 @@
     position: absolute;
     background: transparent;
     overflow: hidden;
+    border: 0;
   }
 
   .answer textarea {
@@ -110,6 +115,11 @@
     .a3 {
       left: 496px;
       width: 202px;
+      top: 44px;
+    }
+    .a4 {
+      left: 56px;
+      width: 30px;
       top: 44px;
     }
   }
