--- a/src/scss/pages/safety-eft-form.scss
+++ b/src/scss/pages/safety-eft-form.scss
@@ -14,6 +14,7 @@
   input[type="date"],
   input[type="year"],
   input[type="month"] {
+
     &::-webkit-inner-spin-button,
     &::-webkit-calendar-picker-indicator {
       display: none;
@@ -34,6 +35,7 @@
     width: 100%;
     position: absolute;
   }
+
   .answer input,
   .answer textarea {
     width: 100%;
@@ -43,6 +45,7 @@
     position: absolute;
     background: transparent;
     overflow: hidden;
+    border: 0;
   }
 
   .answer textarea {
@@ -54,6 +57,7 @@
     font-family: monospace;
     letter-spacing: 7px;
   }
+
   .answer .check-mark {
     position: absolute;
 
@@ -66,10 +70,12 @@
       position: absolute;
       transform: rotate(45deg);
     }
+
     &::before {
       transform: rotate(-45deg);
     }
   }
+
   textarea.form-control {
     border: 0;
     resize: none;
@@ -114,26 +120,31 @@
       width: 120px;
       top: 81px;
     }
+
     .a5 {
       left: 110px;
       width: 560px;
       top: 109px;
     }
+
     .a6 {
       left: 551px;
       width: 20px;
       top: 63px;
     }
+
     .a7 {
       left: 591px;
       width: 20px;
       top: 63px;
     }
+
     .a8 {
       left: 644px;
       width: 20px;
       top: 119px;
     }
+
     .a9 {
       left: 424px;
       width: 120px;
@@ -164,26 +175,31 @@
       width: 50px;
       top: 53px;
     }
+
     .a3 {
       left: 210px;
       width: 359px;
       top: 86px;
     }
+
     .a4 {
       left: 653px;
       width: 50px;
       top: 86px;
     }
+
     .a5 {
       left: 210px;
       width: 359px;
       top: 120px;
     }
+
     .a6 {
       left: 653px;
       width: 50px;
       top: 120px;
     }
+
     .a7 {
       left: 391px;
       width: 50px;
@@ -201,10 +217,17 @@
       width: 359px;
       top: 40px;
     }
+
     .a2 {
-      left: 170px;
-      width: 169px;
-      top: 20px;
+      left: 180px;
+      width: 40px;
+      top: 30px;
+      transform: rotate(2deg);
+    }
+    .a2.signature {
+      left: 180px;
+      width: 40px;
+      top: 30px;
       transform: rotate(2deg);
     }
   }
@@ -232,11 +255,13 @@
       width: 420px;
       top: 68px;
     }
+
     .a3 {
       left: 308px;
       width: 359px;
       top: 103px;
     }
+
     .a4 {
       left: 308px;
       width: 430px;
