--- a/src/scss/pages/trevelor-eft-autopay.css
+++ b/src/scss/pages/trevelor-eft-autopay.css
@@ -3,6 +3,10 @@
   position: relative;
 }
 
+.form-img {
+  width: 100%;
+}
+
 .page-details.trevelor-eft-autopay {
   position: absolute;
   top: 0;
@@ -17,9 +21,6 @@
 .page-details.trevelor-eft-autopay input[type=month]::-webkit-calendar-picker-indicator {
   display: none;
   -webkit-appearance: none;
-}
-.page-details.trevelor-eft-autopay .form-img {
-  width: 100%;
 }
 .page-details.trevelor-eft-autopay .answer {
   position: absolute;
@@ -38,6 +39,7 @@
   position: absolute;
   background: transparent;
   overflow: hidden;
+  border: 0;
 }
 .page-details.trevelor-eft-autopay .answer textarea {
   font-size: 10px;
